Update and rename portfolio.html to finlas.html

--- a/finlas.html
+++ b/finlas.html
@@ -106,7 +106,27 @@
       <img src="myimage.png" class="rounded-circle img-fluid mb-3" style="max-width: 300px;">
       <h1>Shawn Kent Prades</h1>
       <h2>IT Student</h2>
+      <h5 class="text-light">Shawn Kent S. Prades is a 19-year-old IT student with a passion for technology. Currently diving deep into the world of coding and systems, Shawn is eager to make his mark in 
+        the tech field and is constantly honing his skills to tackle the digital challenges of tomorrow.</h5>
       <p class="mt-3 mx-auto" style="max-width: 700px;"></p>
+    </div>
+  </section>
+
+  <section id="tools" class="py-5"5>
+    <div class="container" style="max-height: 10055;">
+      <h2 class="text-center mb-5">Tools I use</h2>
+      <div class="row">
+        <div class="col-md-4 mb-4 ">
+        <img src="https://cdna.artstation.com/p/assets/images/images/051/677/778/large/alexey-1.jpg?1657889349" class=" img-fluid mb-3" style="max-height: 100px;">
+      </div>
+      <div class="col-md-4 mb-4 ">
+        <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-css-logo-png-transparent-svg-vector-bie-supply-9.png" class=" img-fluid mb-3" style="max-height: 100px;">
+      </div>
+      <div class=" col-md-4 mb-4 ">
+        <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-file-html-shiny-icon-svg-wikimedia-commons-11.png" class=" img-fluid mb-3" style="max-height: 100px;">
+      </div>  
+    </div>
+      
     </div>
   </section>
 
